2004-03-15  Dodji  <dodji@gnome.org>

	* tests/Makefile.am: added the tests/valgrind-version.sh file in
	the distribution.
	
	* tests/testctl: enforced the use of valgrind 2.1.1 or higher.
	* tests/valgrind-version.sh: added this file to test the version of
	the currently installed version of valgrind.

2004-03-14  Dodji  <dodji@gnome.org>

	* src/cr-style.c: 
	(cr_style_set_props_to_defaults): added more default props 
	init.
	* src/cr-fonts.h: modified some declarations here to
	ease the support of the "font-weight: bolder" and 
	"font-weight: lighter" support in sewfox.

	* src/cr-parser.[ch],src/cr-rgb.[ch],src/cr-style.c:
	applied a patch from Benjamin Dauvergne to add
	CRRgb::parse_from_buf() and CRRgb::set_from_term()
	methods. Modified the patch to comply with libcroco
	coding style and to kill a compiler warning.

2004-03-13  Dodji  <dodji@gnome.org>

	* Makefile.am,tests/Makefile.am,tests/test-output-refs/Makefile.am: 
	Added some distribution plumbing.

	* configure.in: bumped version number to 0.5 and bumped version-info.

	* src/cr-sel-eng.c,src/cr-stylesheet.c,
	src/cr-tknzr.c,tests/test5-main.c,tests/testctl:
	massive mem leaks/corruption killing.
	* vg.supp: added this to suppress glib normal leaks
	from the leak report.

2004-03-12  Dodji  <dodji@gnome.org>

	* src/cr-declaration.c,src/cr-doc-handler.c,
	src/cr-input.[ch],src/cr-parser.c,src/cr-rgb.c,
	src/cr-selector.c,src/cr-term.c,src/cr-token.c,
	tests/test1-main.c,tests/test4-main.c: started to kill mem leaks
	and corruptions.

	* tests/testctl: added the --show-reachable=yes flag to valgrind.

	* tests/testctl: added better valgrind error reporting.

2004-03-11  Dodji  <dodji@gnome.org>

	* Makefile.am: now, tests are to be run by doing "make test".
	Also, cleans up the previous test output before actually running.
	* global-vars.sh: added this sh script that sets variable used
	in all the test sh scripts based on csslint.
	* test-prop-ident,test-unknown-at-rule,test-unknown-at-rule2: 