@@ -1,3 +1,13 @@
+2004-03-16  Dodji  <dodji@gnome.org>
+
+	* croco-config.in: fixed this to include libxml2 and glib
+	into cflags and libs.
+	* docs/examples/cssom-example-1.c,docs/examples/sac-example-1.c,
+	docs/examples/sac-example-2.c, docs/examples/selection-example-1.c,src/cr-sel-eng.c: 
+	fix the code examples to reflect changes in 0.5, kill some
+	memleaks where needed.
+	* src/cr-sel-eng.c: killed a memleak in the selection engine.
+
 2004-03-15  Dodji  <dodji@gnome.org>
 
 	* tests/Makefile.am: added the tests/valgrind-version.sh file in
